# nlu_full_stack

./: README.md  pyproject.toml
.github/workflows/: linter.yml
functions/sample/python/: .gitignore  dealership.py  review.py
server/: .env.sample  Dockerfile  db.sqlite3  deployment.yaml  manage.py
server/djangoapp/: admin.py  models.py  restapis.py  urls.py  views.py
server/djangoapp/templates/djangoapp/: about.html  add_review.html  contact.html  dealer_details.html  index.html  nav_bar.html  registration.html
server/djangobackend/: settings.py  urls.py
